# SCom-Tree-for-2D

./: .gitignore  CMakeLists.txt  README.md
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: cameraControl.h  clipmap.h  global.h  graphicalInterface.h  shaders.h
shaders/: terrain.frag  terrain.vert
src/: cameraControl.cpp  clipmap.cpp  global.cpp  graphicalInterface.cpp  main.cpp  shaders.cpp
